# Visual_Image_Retrieval

./: .gitignore  .gitmodules  README.md
Lab 1-Invidual/Source/: CMakeLists.txt
Lab 1-Invidual/Source/includes/: histogram.hpp
Lab 1-Invidual/Source/src/: histogram.cpp  main.cpp
Lab 1-Invidual/src/: main.cpp
Lab 2-Invidual/Source/: CMakeLists.txt
Lab 2-Invidual/Source/src/: main.cpp
Lab 3/Source/: CMakeLists.txt
Lab 3/Source/includes/: SaveBinaryCV.h  histogram.hpp  ultils.hpp
Lab 3/Source/parsers/: bin.js
Lab 3/Source/src/: SaveBinaryCV.cpp  histogram.cpp  main.cpp  ultils.cpp
